stderr
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! @ lint: `eslint --config ${CYBER_DOJO_SANDBOX}/.eslintrc.json /**/*.js`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the @ lint script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /home/sandbox/.npm/_logs/2022-09-08T19_26_12_387Z-debug.log
FAIL ./hiker.test.js
  â— Test suite failed to run

    SyntaxError: /sandbox/hiker.js: Unexpected token, expected ";" (39:65)

      37 | function closestToZero(listOfNumbers){
      38 |   const minValue = listOfNumbers
    > 39 |      .map(originalValue => {originalValue:originalValue, distance:Math.abs(originalValue)})
         |                                                                  ^
      40 |      .reduce(
      41 |       (previousValue, currentValue) => {
      42 |         if(previousValue.distance > currentValue.distance) {

      at Parser._raise (../etc/jest/node_modules/@babel/parser/src/parser/error.js:60:45)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        1.514 s
Ran all test suites.
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! @ test: `jest --coverage`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the @ test script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /home/sandbox/.npm/_logs/2022-09-08T19_26_14_936Z-debug.log
